--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "firebase": "^9.13.0",
     "firestore": "^1.1.6",
     "navigator": "^1.0.1",
     "react": "^18.2.0",
