--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@types/react": "^18.0.25",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "^18.0.8"
+    "@types/react-dom": "^18.0.8",
+    "@types/uuid": "^8.3.4"
   }
 }
