chart with emission from your trip

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.6",
     "firebase": "^9.13.0",
     "firestore": "^1.1.6",
     "gh-pages": "^4.0.0",
     "navigator": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
