--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react": "^18.0.25",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4"
   }
 }
