--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gh-pages": "^4.0.0",
     "i18next": "^22.0.6",
     "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.1",
     "navigator": "^1.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
